style Menu css to be fixed on mobile view
also create an useRef synthese in doc to help detect overflow in card.

--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,4 +1,5 @@
 .AppLayoutContainer {
     max-width: var(--container-xl);
     margin: 0 auto;
+    position: relative;
 }
